1991-10-21  ste_cm@software.org

	* src/ded.h:
	added an unused member at the beginning of FLIST (next) that
	is there to fool the optimizer of Apollo CC 6.7 into working
	properly.

1991-10-18  ste_cm@software.org

	* src/dedscan.c:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

	* src/dedscan.c: broke up logic in 'statLINE()' to avoid apollo cc 6.7 
	optimizer bug (it made the first arg on 'dedstat()' null).

1991-10-18  dickey@software.org

	* test/test2.cmd: filter file-group

1991-10-18  ste_cm@software.org

	* test/test2.cmd:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* test/edit_test.sh: do the same for owner (uid)

1991-10-18  ste_cm@software.org

	* test/edit_test.sh:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* test/edit_test.sh: try hack to filter out groups from test2.cmd

	* test/run_test.sh: test assumes 'ded' has mode '755' initially

	* test/edit_test.sh: prefer $USER to $LOGNAME (actually from `whoami`)

	* src/Makefile:
	need both rcsdefs.h & sccsdefs.h in both dedscan.c, ftree.c

	* src/ftree.c: converted to ANSI

1991-10-18  ste_cm@software.org

	* src/ftree.c:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* src/dedscan.c: adjusted includes

	* Makefile: cleanup recursion

1991-10-18  ste_cm@software.org

	* Makefile: BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* test/test1.cmd: mods to test

1991-10-18  ste_cm@software.org

	* test/test1.cmd:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs

1991-10-18  dickey@software.org

	* test/test2.cmd: mods to test

	* test/run_test.sh: removed log-comment
	run from test-versions
	don't write to log-file directly

	* test/test3.cmd: mods to test

1991-10-18  ste_cm@software.org

	* test/test3.cmd:
	BASELINE Fri Oct 18 16:46:43 1991 -- ANSI conversion; vcs
