@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19911021
+MANIFEST for ded, version t19911022
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
